fixup! BB 32308: Use direct browser sizing for letterboxing.
BB 44041: Make dialog overlays cover the correct area without fixed positioning.

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -120,12 +120,7 @@ browser:fullscreen {
 
 :root:not([inDOMFullscreen]) .letterboxing.letterboxing-ready .browserContainer:not(.responsive-mode)
   > .browserStack:not(.exclude-letterboxing) {
-
   place-content: var(--letterboxing-vertical-alignment) center;
-  & > .dialogStack {
-    position: fixed;
-  }
-
 }
 
 panelmultiview {
